# system-detection

./: API_DOCUMENTATION.md  CHANGELOG.md  CHECK_DATA_SOURCE.md  Cargo-backup.toml  Cargo.toml  DEVELOPMENT_PROMPT.md  EXPERT_LEVEL_ASSESSMENT.md  IMPORTANT_README.md  PERFORMANCE_OPTIMIZATION.md  PORTFOLIO_DEPLOYMENT_GUIDE.md  README.md  README_SETUP.md  ROADMAP_TO_10_10.md  RUN_TAURI_CORRECTLY.sh  RUN_TAURI_CORRECTLY_WINDOWS.bat  RUN_TAURI_CORRECTLY_WINDOWS.ps1  WINDOWS_DEBUGGING.md  WINDOWS_SETUP.md  cleanup.ps1  config.json  debug-tauri.sh  diagnose.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  run-clean.sh  run-compiled-app.sh  run-dev.sh  run-direct.sh  run-tauri-clean.sh  run-tauri-final.sh  run-tauri-no-snap.sh  run-tauri-standalone.sh  run-tauri.sh  start-tauri.sh  start-windows.bat  start-windows.ps1  tailwind.config.js  test-backend.sh  (+4 more)
portfolio-deploy/: README.md  demo.html
src/: App.css  App.tsx  AppWrapper.tsx  ErrorBoundary.tsx  index.css  lib.rs  main.rs  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  monitoring.rs  optimization.rs  security.rs
src-tauri/src/monitoring/: high_perf_monitor.rs  kernel_monitor.rs  linux_ebpf.rs  ultra_perf_monitor.rs  windows_etw.rs
src/backend/: cpu_monitor.rs  gpu_monitor.rs  logger.rs  memory_monitor.rs  mod.rs  network_monitor.rs  process_monitor.rs  sensors.rs  storage_monitor.rs  system_monitor.rs
src/commands/: config.rs  mod.rs
src/components/: Dashboard.tsx  DraggableDashboard.tsx  Header.tsx  OptimizationDashboard.tsx  SecurityDashboard.tsx  SortableWidget.tsx  SystemOverview.tsx  TabbedDashboard.tsx  ThemeToggle.tsx
src/components/monitors/: CpuMonitor.tsx  DiskMonitor.tsx  DpuMonitor.tsx  FpgaMonitor.tsx  GpuMonitor.tsx  HighPerfCpuMonitor.tsx  KernelMonitor.tsx  MemoryMonitor.tsx  NetworkMonitor.tsx  NpuMonitor.tsx  ProcessList.tsx  QuantumProcessorMonitor.tsx
src/contexts/: ThemeContext.tsx
src/core/: config.rs  error.rs  metrics.rs  mod.rs  monitor.rs  types.rs
src/hooks/: useMetricsHistory.ts  useThrottledMetrics.ts
src/services/: highPerfService.ts  kernelService.ts  mockTauri.ts  mod.rs  monitoring_service.rs  tauriDetector.ts
src/tests/: App.test.tsx  cpu_monitor_tests.rs  gpu_monitor_tests.rs  integration_tests.rs  memory_monitor_tests.rs  mod.rs  network_monitor_tests.rs  process_monitor_tests.rs  setup.ts  storage_monitor_tests.rs
src/tests/components/: CpuMonitor.test.tsx  Dashboard.test.tsx
src/types/: index.ts
src/utils/: format.ts
system-monitor/: package.json
system-monitor/src-tauri/: Cargo.toml  tauri.conf.json
