[package]
name = "ai-desktop-app"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.29"         # System monitoring (CPU, Memory, Process Info)
nvml-wrapper = "0.9"     # NVIDIA GPU monitoring
vulkanalia = "0.22.0"    # Vulkan API for GPU support
log = "0.4"              # Logging
flexi_logger = "0.25"    # Advanced logging
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
tokio = { version = "1.34", features = ["full"] }
async-trait = "0.1.68"
num_cpus = "1.16.0"
vulkano = "0.33.0"
