[package]
name = "system-monitor"
version = "0.1.0"
edition = "2021"

[lib]
name = "system_monitor"
path = "src/lib.rs"

[[bin]]
name = "test_monitors"
path = "src/bin/test_monitors.rs"

[[bin]]
name = "quick_test"
path = "src/bin/quick_test.rs"

[[bin]]
name = "config_demo"
path = "src/bin/config_demo.rs"

[dependencies]
# System monitoring
sysinfo = "0.30"
nvml-wrapper = { version = "0.9", optional = true }
num_cpus = "1.16.0"

# Async runtime
tokio = { version = "1.34", features = ["full"] }
async-trait = "0.1.68"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration
config = "0.14"
directories = "5.0"

# Logging
log = "0.4"
flexi_logger = "0.25"
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Data structures
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"

# System info
hostname = "0.3"
whoami = "1.4"
os_info = "3.7"

[dev-dependencies]
# Testing
mockall = "0.12"
tempfile = "3.8"
criterion = "0.5"
rstest = "0.18"
assert_fs = "1.0"
predicates = "3.0"

[features]
default = ["nvidia"]
nvidia = ["nvml-wrapper"]