[package]
name = "system-monitor"
version = "0.1.0"
description = "Advanced System Monitor"
authors = ["System Monitor Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.3"
os_info = "3.7"

[features]
default = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

