[package]
name = "system-monitor"
version = "0.1.0"
description = "Advanced System Monitor"
authors = ["System Monitor Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"  # Binary serialization for zero-copy IPC
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.3"
os_info = "3.7"
nvml-wrapper = { version = "0.11", optional = true }
crossbeam = "0.8"  # Lock-free data structures
dashmap = "5.5"    # Concurrent HashMap
parking_lot = "0.12"  # Fast locks
rayon = "1.8"      # Parallel processing
num_cpus = "1.16"  # CPU detection
libc = "0.2"       # System calls
cfg-if = "1.0"     # Conditional compilation

# High-Performance Monitoring Dependencies
memmap2 = "0.9"  # Memory mapping for zero-copy
ringbuf = "0.3"  # Lock-free ring buffer
cpu-affinity = { version = "0.4", optional = true }  # CPU affinity management
nix = { version = "0.27", optional = true }  # Unix system calls
thiserror = "1.0"  # Error handling
tracing = "0.1"  # Structured logging
tracing-subscriber = "0.3"  # Logging subscriber

# Platform-specific dependencies
perf-event = { version = "0.4", optional = true }  # Linux performance counters
perf-event-open = { version = "0.1", optional = true }  # Raw perf_event_open syscalls
windows = { version = "0.52", optional = true, features = ["Win32_System_Diagnostics_Etw", "Win32_Foundation", "Win32_System_Threading"] }  # Windows ETW

[features]
default = ["nvidia"]
nvidia = ["nvml-wrapper"]
# Platform-specific features
linux = ["dep:perf-event", "dep:perf-event-open", "dep:nix", "dep:cpu-affinity"]
windows = ["dep:windows"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3  # Changed from "s" to 3 for maximum performance
strip = true

[profile.dev]
opt-level = 1  # Faster debug builds

